--- a/app/src/main/res/layout/activity_csharp_language.xml
+++ b/app/src/main/res/layout/activity_csharp_language.xml
@@ -46,7 +46,7 @@
                 android:text="@string/_1_introduction"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -73,7 +73,7 @@
                 android:text="@string/_4_variables"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -100,7 +100,7 @@
                 android:text="@string/_3_comments"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -127,7 +127,7 @@
                 android:text="@string/_5_inputs"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -154,7 +154,7 @@
                 android:text="@string/_6_data_types"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -181,7 +181,7 @@
                 android:text="@string/_8_conditional_statements"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -208,7 +208,7 @@
                 android:text="@string/_7_operators"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -235,7 +235,7 @@
                 android:text="@string/_9_looping_statements"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -262,7 +262,7 @@
                 android:text="@string/_10_arrays"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -290,7 +290,7 @@
                 android:text="11. OOP"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -317,7 +317,7 @@
                 android:text="@string/_2_syntax"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/csharp_icon_new"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
