--- a/app/src/main/res/layout/fragment_python_inputs_1.xml
+++ b/app/src/main/res/layout/fragment_python_inputs_1.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Variables"
+            android:text="Input"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -47,22 +47,10 @@
             app:layout_constraintTop_toBottomOf="@+id/P_Variables_imageView1" />
 
         <TextView
-            android:id="@+id/p_Operators_Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Creating Variables"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Variables_Text2" />
-
-        <TextView
             android:id="@+id/P_Variables_Text2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Variables are containers for storing data values."
+            android:text="Python input() Function is used to get input from the user. It prompts for the user input and reads a line. After reading data, it converts it into a string an"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -72,31 +60,17 @@
             app:layout_constraintTop_toBottomOf="@+id/P_Variables_Text1"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <TextView
-            android:id="@+id/P_Operators_Text03"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Python has no command for declaring a variable.A variable is created the moment you first assign a value to it."
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
         <HorizontalScrollView
             android:id="@+id/hv1"
             android:layout_width="0dp"
-            android:layout_height="230dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Syntax_imageView">
 
             <WebView
-                android:id="@+id/p_Variables_code"
+                android:id="@+id/python_input_example"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/font"
@@ -107,10 +81,10 @@
             android:id="@+id/P_Syntax_imageView"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text03"
+            app:layout_constraintTop_toBottomOf="@+id/P_Variables_Text2"
             app:srcCompat="@drawable/codey_python_cut" />
 
         <TextView
@@ -118,7 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="For example."
+            android:text="Ask for the user's name and print it:"
             app:layout_constraintBottom_toBottomOf="@+id/P_Syntax_imageView"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
@@ -132,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Casting"
+            android:text="Definition and Usage"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -148,7 +122,7 @@
             android:id="@+id/P_Syntax_Text7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="If you want to specify the data type of a variable, this can be done with casting."
+            android:text="The input() function allows user input."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -168,7 +142,7 @@
             app:layout_constraintTop_toBottomOf="@+id/P_Syntax_Text7">
 
             <WebView
-                android:id="@+id/conversion_example"
+                android:id="@+id/python_input_prompt_example"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/font"
@@ -176,36 +150,29 @@
         </HorizontalScrollView>
 
 
-        <TextView
-            android:id="@+id/P_variables_Text6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/P_Syntax_imageView1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginTop="16dp"
-            android:text="Variable Names"
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/hv2"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
+            app:srcCompat="@drawable/codey_python_cut" />
 
         <TextView
-            android:id="@+id/P_variables_Text7"
+            android:id="@+id/P_Syntax_Text12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/variable_names_description"
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
+            android:background="@drawable/callout_background"
+            android:text="prompt A String, representing a default message before the input."
+            app:layout_constraintBottom_toBottomOf="@+id/P_Syntax_imageView1"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_variables_Text6"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
+            app:layout_constraintStart_toEndOf="@+id/P_Syntax_imageView1"
+            app:layout_constraintTop_toTopOf="@+id/P_Syntax_imageView1"
+            app:layout_constraintVertical_bias="0.04"
+            tools:ignore="TextSizeCheck" />
 
         <HorizontalScrollView
             android:id="@+id/hv3"
@@ -214,15 +181,17 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_variables_Text7">
+            app:layout_constraintTop_toBottomOf="@+id/P_Syntax_imageView1">
 
             <WebView
-                android:id="@+id/p_variable_naming"
+                android:id="@+id/python_input_with_output_example"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
+
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical1"
