--- a/app/src/main/res/layout/fragment_c_sharp_syntax_1.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_syntax_1.xml
@@ -18,7 +18,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/textView"
@@ -83,7 +83,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text03"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/P_Operators_Text8"
@@ -124,7 +124,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/hv1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/P_Syntax_Text3"
@@ -149,7 +149,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Syntax_imageView"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/c_Syntax_Text3"
