--- a/app/src/main/res/layout/fragment_c_sharp_variables_3.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_variables_3.xml
@@ -1,14 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CSharpLessons.CSharpVariablesFragments.CSharpVariablesFragment_3">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fillViewport="true"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/P.Intro.ImageView1"
+                android:layout_width="54dp"
+                android:layout_height="74dp"
+                android:contentDescription="@string/codey_image"
+                app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
+                app:srcCompat="@drawable/codey_c_cut" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/questions_you_might_asked"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/P.Intro.ImageView1"
+                app:layout_constraintStart_toEndOf="@+id/P.Intro.ImageView1"
+                app:layout_constraintTop_toTopOf="@+id/P.Intro.ImageView1" />
+
+            <Button
+                android:id="@+id/P_loop_btnQ1"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:text="What does a question mark after a variable mean in C#?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/P.Intro.ImageView1"
+                tools:ignore="TextContrastCheck" />
+
+            <Button
+                android:id="@+id/P_loop_btnQ2"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:text="How to use variable as type in C#?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/P_loop_btnQ1"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/P_loop_btnQ1"
+                app:layout_constraintTop_toBottomOf="@+id/P_loop_btnQ1"
+                tools:ignore="TextSizeCheck,TextContrastCheck" />
+
+            <Button
+                android:id="@+id/P_loop_btnQ3"
+                android:layout_width="271dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="68dp"
+                android:text="What are the rules for naming variables in C#?"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:theme="@style/lionelButton"
+                app:cornerRadius="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/P_loop_btnQ2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/P_loop_btnQ2"
+                app:layout_constraintTop_toBottomOf="@+id/P_loop_btnQ2"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="TextSizeCheck,TextContrastCheck" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_horizontal1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="15dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_horizontal2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="15dp" />
+
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="guideline_vertical1,guideline_vertical2,guideline_horizontal1,guideline_horizontal2" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
